force-app/main/default/objects/ErrorLogging__c/ErrorLogging__c.object-meta.xml
<CustomObject>
    <description>Captures all errors of scheduled jobs.</description>
    <label>Error Logging</label>
    <nameField>
        <displayFormat>ERROR-{0000000}</displayFormat>
        <label>Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Loggings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>