force-app/main/default/objects/ErrorLogging__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>The Error Body.</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>