force-app/main/default/objects/ErrorLogging__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <description>The name of the process which triggered the error.</description>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>