force-app/main/default/objects/ErrorLogging__c/fields/RecordIDs__c.field-meta.xml
<CustomField>
    <fullName>RecordIDs__c</fullName>
    <description>All involved Record IDs.</description>
    <label>Record IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>