force-app/main/default/objects/ErrorLogging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessName__c</columns>
    <columns>Error__c</columns>
    <columns>RecordIDs__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>