force-app/main/default/objects/ErrorLogging__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>ProcessName__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RecordIDs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>